2011-03-16  Jeff Johnson  <github@lapcatsoftware.com>

Reviewed by Alexey Proskuryakov.

        Logic error in -[WebHTMLView close]
        https://bugs.webkit.org/show_bug.cgi?id=56445

        The function setDraggingImageURL() is no longer called and can be deleted.

        No new tests. Deleting dead code.

        * page/DragController.h:
2011-03-16  Jeff Johnson  <github@lapcatsoftware.com>

        Reviewed by Alexey Proskuryakov.

        Logic error in -[WebHTMLView close]
        https://bugs.webkit.org/show_bug.cgi?id=56445

        Page is always nil at this point, because [self _webView] is nil,
        so the conditional code is never run.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView close]):

Canonical link: https://commits.webkit.org/71205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81330 268f45cc-cd09-0410-ab3c-d52691b4dbfc